ota_test_error_1.log
Collected 11 tests (test_api, test_auth, test_button, test_mocks, test_mqtt, test_ota, test_settings, test_smart_sensing, test_utils, test_websocket, test_wifi)

Processing test_ota in native environment
--------------------------------------------------------------------------------
Building...
test\test_ota\test_ota_updater.cpp: In function 'bool parseGithubReleaseJson(const String&, String&, String&, String&)':
test\test_ota\test_ota_updater.cpp:88:41: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
   88 |         int urlBegin = json.lastIndexOf("\"", urlStart);
      |                                         ^~~~
      |                                         |
      |                                         const char*
In file included from test\test_ota\test_ota_updater.cpp:6:
test\test_ota\../test_mocks/Arduino.h:68:24: note: initializing argument 1 of 'int String::lastIndexOf(char, int) const'
   68 |   int lastIndexOf(char c, int start) const {
      |                   ~~~~~^
*** [.pio\build\native\test\test_ota\test_ota_updater.o] Error 1
Building stage has failed, see errors above. Use `pio test -vvv` option to enable verbose output.
----------------- native:test_ota [ERRORED] Took 0.70 seconds -----------------

=================================== SUMMARY ===================================
Environment         Test                Status    Duration
------------------  ------------------  --------  ------------
esp32-s3-devkitm-1  test_api            SKIPPED
esp32-s3-devkitm-1  test_auth           SKIPPED
esp32-s3-devkitm-1  test_button         SKIPPED
esp32-s3-devkitm-1  test_mocks          SKIPPED
esp32-s3-devkitm-1  test_mqtt           SKIPPED
esp32-s3-devkitm-1  test_ota            SKIPPED
esp32-s3-devkitm-1  test_settings       SKIPPED
esp32-s3-devkitm-1  test_smart_sensing  SKIPPED
esp32-s3-devkitm-1  test_utils          SKIPPED
esp32-s3-devkitm-1  test_websocket      SKIPPED
esp32-s3-devkitm-1  test_wifi           SKIPPED
native              test_api            SKIPPED
native              test_auth           SKIPPED
native              test_button         SKIPPED
native              test_mocks          SKIPPED
native              test_mqtt           SKIPPED
native              test_ota            ERRORED   00:00:00.699
native              test_settings       SKIPPED
native              test_smart_sensing  SKIPPED
native              test_utils          SKIPPED
native              test_websocket      SKIPPED
native              test_wifi           SKIPPED
================== 1 test cases: 0 succeeded in 00:00:00.699 ==================
